<resources>
    <string name="app_name">assignment3</string>
    <string name="mvp_text">MVP</string>
    <string name="mvvm_text">MVVM</string>
    <string name="numberField1">Enter number 1</string>
    <string name="numberField2">Enter number 2</string>
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="mult">Multiply</string>
    <string name="div">Divide</string>
    <string name="genericErrorToast">Must include valid inputs in both fields</string>
    <string name="divErrorToast">Cannot divide by 0</string>
    <string name="result">Result: %1$s</string>
</resources>